fix: fixed nlbw table overflow style

--- a/dev/style.css
+++ b/dev/style.css
@@ -1859,9 +1859,23 @@ div#container\.nlbw\.traffic {
     /* overflow: auto; */
 }
 div#container\.nlbw\.traffic #host-data {
-    display: block;
-    overflow: auto;
+
 }
+
+#container\.nlbw\.traffic th, 
+#container\.nlbw\.traffic td, 
+#container\.nlbw\.layer7 th, 
+#container\.nlbw\.layer7 td,  
+#container\.nlbw\.ipv6 th,
+#container\.nlbw\.ipv6 td, 
+#container\.nlbw\.export th, 
+#container\.nlbw\.export td {
+    padding: 3px;
+    border-top: none;
+    border-left: #ccc 1px solid;
+    border-right: #ccc 1px solid;
+    border-bottom: #ccc 1px solid;
+ }
 
 td#__status-ifc-signal {
     width: 60px !important;
@@ -2684,28 +2698,6 @@ header > .container > .pull-right > * {
 
 }
 
-#container\.nlbw\.traffic table, 
-#container\.nlbw\.layer7 table, 
-#container\.nlbw\.ipv6 table, 
-#container\.nlbw\.export table {
-    border: #ccc 1px solid;
-}
-
-#container\.nlbw\.traffic th, 
-#container\.nlbw\.traffic td, 
-#container\.nlbw\.layer7 th, 
-#container\.nlbw\.layer7 td,  
-#container\.nlbw\.ipv6 th,
-#container\.nlbw\.ipv6 td, 
-#container\.nlbw\.export th, 
-#container\.nlbw\.export td {
-    padding: 3px;
-    border-top: none;
-    border-left: #ccc 1px solid;
-    border-right: #ccc 1px solid;
-    border-bottom: #ccc 1px solid;
- }
-
 .cbi-tabmenu + .cbi-section ul {
     text-align: left;
 }
@@ -2933,6 +2925,13 @@ body.lang_pl.node-main-login .cbi-value-title {
         overflow: auto;
     }
     .node-nlbw-usage table {
+        display: block;
+        overflow: auto;
+    }
+    #container\.nlbw\.traffic table, 
+    #container\.nlbw\.layer7 table, 
+    #container\.nlbw\.ipv6 table, 
+    #container\.nlbw\.export table {
         display: block;
         overflow: auto;
     }
